--- a/Views/hobbies.html
+++ b/Views/hobbies.html
@@ -5,6 +5,11 @@
 <title>Julian's Hobbies</title>
 </head>
 <body class="bg-dark text-info">
+	<div id="navbar-container"></div>
+	<script src="../resources/js/navbar.js"></script>
+	<script> loadNavBar();  // Call the function to load the navbar
+	</script> 
+	<!-- 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">   
 	<div class="collapse navbar-collapse" id="navbarNav">
 	<ul class="navbar-nav">
@@ -19,10 +24,10 @@
 	</li>
 	</ul>
 	</div>
-	</nav>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" ></script>
-<h1>Julian's Top 4 Hobbies</h1>
-	<div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+	</nav>  -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" ></script>
+<h1>Julian's Top 4 Hobbies</h1>	
+<div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
   	<div class="carousel-inner">
     <div class="carousel-item active">
       <img src="../resources/img/golf_course.jpg" class="d-block w-100" alt="Golf Course - Playing Golf">
@@ -38,6 +43,6 @@
     </div>
   </div>
 </div>
-<p>My top four hobbies right now are playing golf, working out, playing fantasy football, and watching sports. I go to the golf range once or twice a week and play twice a month. I also work out 5 days a week and follow fantasy football during the NFL season. As for sports, I watch the Knicks and Yankees, NFL, UFC, and F1.</p>
+<p>My top four hobbies right now are playing golf, working out, playing fantasy football, and watching sports. I go to the golf range once or twice a week and play twice a month. I also work out 5 days a week and follow fantasy football during the NFL season. As for sports, I watch the Knicks and Yankees, NFL, UFC, and F1.</p> 
 </body>
 </html> 
