--- a/Views/index.html
+++ b/Views/index.html
@@ -5,22 +5,10 @@
 <title>Julian Pastor - Class of 2025, BSc Chemical Engineering</title>
 </head>
 <body class="bg-success text-light">
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">   
-	<div class="collapse navbar-collapse" id="navbarNav">
-	<ul class="navbar-nav">
-	<li class="nav-item">
-	<a class="nav-link" href="index.html">Home</a>
-	</li>
-	<li class="nav-item">
-	<a class="nav-link" href="schedule.html">Fall 2024 Schedule</a>
-	</li>
-	<li class="nav-item">
-	<a class="nav-link" href="hobbies.html">Hobbies</a>
-	</li>
-	</ul>
-	</div>
-	</nav>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" ></script>
+	<div id="navbar-container"></div>
+	
+	
+	
 <h1>Julian Pastor</h1>
 <p>Hi everyone, I'm Julian Pastor. I'm a senior chemical engineering major with minors in Computer Science and Engineering Entrepreneurship. I'm from Fairfield, New Jersey and I am a Yankees, Knicks, and Giants fan. My background is Cuban on both sides, and I speak Spanish. On campus, I am the Vice President of Society of Hispanic Professional Engineers, a Blue Key Tour Guide, and an Engineering Peer. This spring, I studied abroad in London at University College London and traveled to 7 countries during my time in Europe. I'm excited to return to campus and look forward to my CS classes.</p>
 <img 
@@ -30,5 +18,13 @@ alt="A picture of Julian and a raven next to the tower of London"
 width="220px" 
 />
 <a href="https://www1.villanova.edu/university/liberal-arts-sciences/programs/computingsciences.html">Link to Villanova Computing Sciences Department </a> 
+
+<script src="../resources/js/navbar.js"></script>
+	
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" ></script>
+
+	<script> loadNavBar();  // Call the function to load the navbar
+	</script> 
+
 </body>
 </html>
