--- a/Views/schedule.html
+++ b/Views/schedule.html
@@ -5,6 +5,11 @@
 </head>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 <body class="bg-dark text-light">
+	<div id="navbar-container"></div>
+	<script src="../resources/js/navbar.js"></script>
+	<script> loadNavBar();  // Call the function to load the navbar
+	</script> 
+	<!-- 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">   
 	<div class="collapse navbar-collapse" id="navbarNav">
 	<ul class="navbar-nav">
@@ -19,9 +24,10 @@
 	</li>
 	</ul>
 	</div>
-	</nav>
+	</nav>  -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous" ></script>
 <h1>Julian's Fall 2024 Schedule</h1>
+	<div id="schedule-container">
 <table>
 <thead>
 <tr>
@@ -60,6 +66,10 @@
 </tr>
 <tr></tr>
 </tbody>
+<h2 id="welcome-message">Welcome to my schedule!</h2>
 </table>
+</div>
+<button id="toggle-schedule">Hide Schedule</button>
+<script src="../resources/js/script.js"></script>
 </body>
 </html>
